k8s_gcloud/nginx-ng.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ng
  namespace: identifier-generator
spec:
  selector:
    matchLabels:
      app: nginx-ng
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx-ng
    spec:
      containers:
      - name: nginx-ng
        image: eu.gcr.io/identifier-generator/nginx-ng
        ports:
        - containerPort: 80
