k8s_gcloud/sqldb.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sqldb
  namespace: identifier-generator
spec:
  selector:
    matchLabels:
      app: sqldb
  replicas: 1
  serviceName: sqldb
  template:
    metadata:
      labels:
        app: sqldb
    spec:
      containers:
      - name: sqldb
        image: mcr.microsoft.com/mssql/server:2017-latest-ubuntu
        ports:
        - containerPort: 1433
        volumeMounts:
        - mountPath: /var/opt/mssql
          name: sqlvolume
  volumeClaimTemplates:
  - metadata:
      name: sqlvolume
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 100Mi
