k8s_gcloud/webapi.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  namespace: identifier-generator
spec:
  selector:
    matchLabels:
      app: webapi
  replicas: 3
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
      - name: webapi
        image: eu.gcr.io/identifier-generator/webapi
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets
          mountPath: "/run/secrets/identifier-generator"
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: webapi-secret
