k8s_gcloud/sqldb.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqldb
  namespace: identifier-generator
spec:
  clusterIP: None
  selector:
    app: sqldb
  type: ClusterIP
